# talking-head-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DECISION_RULES.md  OPTIMIZATION_PLAN.md  PROCESS.md  RUNBOOK.md
scripts/: talking_head_cleaner.py
tests/: test_talking_head_cleaner.py
